Improve endpoint structure
